--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+logging.level.com.example.demo.web=INFO
+logging.level.com.example.demo.controllers=INFO
+logging.level.com.example.demo.FieldOfDreamsApplication=DEBUG
+#logging.file.name=logs/spring-boot-logging.log
 
+app.jwt.apiKey=23567b218376f79d9415
+app.jwt.apiUri=http://interview.agileengine.com/auth
+app.jwt.tokenPrefix=Bearer 
+app.jwt.tokenExpirationAfterDays=14
